<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/id1"
        android:title="@string/id1"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/id2"
        android:title="@string/id2"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/id3"
        android:title="@string/id3"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/a1"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings2"
        android:title="@string/a2"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings3"
        android:title="@string/a3"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings4"
        android:title="@string/a4"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings5"
        android:title="@string/a5"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
